# Modnook

./: license  readme.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/api/: mod.rs
backend/src/cache/: core.rs  mod.rs  redis.rs
backend/src/config/: commands.rs  database.rs  mod.rs  redis.rs  server.rs
backend/src/database/schema/: game.rs  mod.rs  organisation.rs  project.rs  user.rs
backend/src/repositories/: user.rs
server/: justfile  openapi-v1.yml
server/ent/: client.go  ent.go  game.go  game_create.go  game_delete.go  game_query.go  game_update.go  generate.go  mutation.go  project.go  project_create.go  project_delete.go  project_query.go  project_update.go  projectfollow.go  projectfollow_create.go  projectfollow_delete.go  projectfollow_query.go  projectfollow_update.go  projectrelease.go  projectrelease_create.go  projectrelease_delete.go  projectrelease_query.go  projectrelease_update.go  projecttype.go  projecttype_create.go  projecttype_delete.go  projecttype_query.go  projecttype_update.go  projecttypeschema.go  projecttypeschema_create.go  projecttypeschema_delete.go  projecttypeschema_query.go  projecttypeschema_update.go  runtime.go  session.go  session_create.go  session_delete.go  session_query.go  session_update.go  (+16 more)
server/ent/enttest/: enttest.go
server/ent/game/: game.go  where.go
server/migrations/: 20260716175223_setup.sql  20260716175500_assets.sql  20260716175711_users.sql  20260716175827_organisations.sql  20260716180055_games.sql  20260718013333_projects.sql  20260718014933_notifications.sql
(+40 files in other folders)
