[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

toasty = { version = "0.7", features = ["postgresql", "jiff"] }

uuid = { version = "1.23.3", features = ["v7", "serde"] }
jiff = { version = "0.2.29", features = ["serde", "std"] }

fred = { version = "10.1.0" }

clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0.18"
anyhow = "1.0.102"
